# prog-edu-assistant

./: .gitignore  .travis.yml  BUILD.bazel  DEVELOPING.md  NOTES.md  README.md  SETUP.md  WORKSPACE  build-student.sh  deploy-cloud-run.sh  deploy-docker.sh  push-student.sh  rebuild-no-blaze.sh  rebuild.sh  requirements.txt  start-local-combined.sh  start-local-docker.sh  start-server-no-queue.sh  start-servers-no-docker.sh  start-servers.sh
autograder/: BUILD.bazel  README.md
autograder/extract/: BUILD.bazel  README.md  extract.py  submission.ipynb
autograder/syntax/: BUILD.bazel  README.md  run.sh  submission1.py  submission2.py  submission3.py  submission4.py  submission5.py  syntax_test.py
autograder/unittest/: BUILD.bazel  README.md  run.sh
autograder/unittest/fail/: BUILD.bazel  add_test.py  submission.py
autograder/unittest/hello/: BUILD.bazel  hello_test.py  submission.py
autograder/unittest/infloop/: BUILD.bazel  infloop_test.py  submission.py
autograder/unittest/infmem/: BUILD.bazel  infmem_test.py  submission.py
deploy/: .gitignore  BUILD.bazel  README.md  cloud-run.env.template  docker-compose.yml  local.env.template  secret.env.template  service-account.json.sample
docker/: .gitignore  BUILD.bazel  README.md  build.sh  docker-compose.yml  nsjail.patch
docker/server/: Dockerfile
docker/stage/: .gitignore  BUILD.bazel  Dockerfile.combined  Dockerfile.worker  README.md
docker/worker/: Dockerfile  README.md
docs/: cloudrun.md  colab.md  grading.md
exercises/: BUILD.bazel  BUILD.ext  README.md  WORKSPACE.ext  dataframe-pre1-en-master.ipynb  dataframe-pre1-master.ipynb  dataframe-pre2-master.ipynb  dataframe-pre3-master.ipynb  dataframe-scrape-weather-data.ipynb  defs.bzl  functional-ja-master.ipynb  functional-master.ipynb  helloworld-en-master.ipynb  helloworld-en.ipynb  introduction-to-nlp-master-english.ipynb  introduction-to-nlp-wikipedia-preprocessing-japanese.ipynb  ml-instructor.ipynb  nlp-exercise-master.ipynb  oop-en-master.ipynb  preamble.py
exercises/data/: 09-July-2019-Oshima-hourly.csv  09-July-2019-Setagaya-hourly.csv  09-July-2019-Tokyo-hourly.csv  15-July-2019-Haneda-(Tokyo-International-Airport)-hourly.csv  15-July-2019-Tokyo-hourly.csv  16-July-2019-Haneda-(Tokyo-International-Airport)-hourly.csv  16-July-2019-Tokyo-hourly.csv  17-July-2019-Haneda-(Tokyo-International-Airport)-hourly.csv  17-July-2019-Tokyo-hourly.csv  BUILD.bazel  README.md  tokyo-weather.csv
exercises/docker.ext/: README.md  build-docker-image.sh  start-local-server.sh
exercises/docker.ext/stage/: .gitignore  Dockerfile  nsjail.patch
go/: BUILD.bazel  go.mod  go.sum
go/autograder/: BUILD.bazel  autograder.go
go/cmd/: BUILD.bazel
go/cmd/assign/: BUILD.bazel  assign.go
go/cmd/functest/: BUILD.bazel  functest.go
go/cmd/grade/: BUILD.bazel  grade.go
go/cmd/keytool/: BUILD.bazel  keytool.go
go/cmd/post/: BUILD.bazel  post.go
go/cmd/tool/: tool.go
go/cmd/try-queue/: BUILD.bazel  tryqueue.go
go/cmd/uploadserver/: BUILD.bazel  main.go
go/cmd/worker/: BUILD.bazel  worker.go
go/notebook/: BUILD.bazel  README.md  notebook.go  notebook_test.go
go/queue/: BUILD.bazel  README.md  queue.go
go/uploadserver/: BUILD.bazel  README.md  uploadserver.go
nbextensions/: BUILD.bazel  README.md
nbextensions/upload_it/: BUILD.bazel  README.md  TODO.txt  main.js  upload_it.yaml
python/: BUILD.bazel  utils.py  utils_test.py
python/colab/: .gitignore  README.md  cat_notebook.py  convert_to_student.py  gdrive_download.py  grade_student.py  preamble.py  requirements.txt
python/prog_edu_assistant_tools/: BUILD.bazel  README.md  setup.py
python/prog_edu_assistant_tools/prog_edu_assistant_tools/: BUILD.bazel  __init__.py  check.py  magics.py  magics_test.py  summary_test_result.py
python/testdata/: BUILD.bazel  formatted_syntax_tb.txt  formatted_tb.txt  zero_division.py
server/: README.md
server/upload/: .gitignore  README.md  TODO.txt  go.mod
server/upload/cmd/uploadserver/: main.go
server/upload/uploadserver/: uploadserver.go
static/: BUILD.bazel  style.css
student/: BUILD.bazel  README.md  postBuild  requirements.txt
