load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load("//exercises:defs.bzl", "assignment_notebook", "autograder_tar", "student_tar")

exports_files(["preamble.py"])

assignment_notebook(
    name = "dataframe-pre1",
    src = "dataframe-pre1-master.ipynb",
    languages = ["ja"],
)

assignment_notebook(
    name = "dataframe-pre2",
    src = "dataframe-pre2-master.ipynb",
    languages = ["ja"],
)

assignment_notebook(
    name = "dataframe-pre3",
    src = "dataframe-pre3-master.ipynb",
    languages = ["ja"],
)

assignment_notebook(
    name = "helloworld-en",
    src = "helloworld-en-master.ipynb",
)

assignment_notebook(
    name = "oop-en",
    src = "oop-en-master.ipynb",
)

assignment_notebook(
    name = "functional",
    src = "functional-master.ipynb",
    languages = ["en", "ja"],
)

assignment_notebook(
    name = "nlp-exercise",
    src = "nlp-exercise-master.ipynb",
)


filegroup(
    name = "data_dir",
    srcs = glob(["data/*"]),
)

pkg_tar(
    name = "dataframe-pre1-data_tar",
    srcs = [
        ":data_dir",
    ],
    mode = "644",
    package_dir = "autograder/DataFrame1/CreateDataFrameFromText",
    strip_prefix = ".",
)

pkg_tar(
    name = "dataframe-pre2-data_tar",
    srcs = [
        ":data_dir",
    ],
    mode = "644",
    package_dir = "autograder/DataFrame2/VisualizeDataset",
    strip_prefix = ".",
)

pkg_tar(
    name = "dataframe-pre3-data_tar",
    srcs = [
        ":data_dir",
    ],
    mode = "644",
    package_dir = "autograder/DataFrame3/DataManipulation",
    strip_prefix = ".",
)

# A rule that collects all autograder data into one tar file.
autograder_tar(
    name = "autograder_tar",
    deps = [
        ":dataframe-pre1",
        ":dataframe-pre1-data_tar",
        ":dataframe-pre2",
        ":dataframe-pre2-data_tar",
        ":dataframe-pre3",
        ":dataframe-pre3-data_tar",
        ":helloworld-en",
        ":oop-en",
        ":functional",
        ":nlp-exercise",
    ],
)

student_tar(
    name = "student_notebooks_tar",
    srcs = [
        ":helloworld-en",
        ":functional",
        ":oop-en",
        ":dataframe-pre1",
        ":dataframe-pre2",
        ":dataframe-pre3",
        ":nlp-exercise",
    ],
)

pkg_tar(
    name = "data_tar",
    srcs = glob(["data/*"]),
    strip_prefix = ".",  # This is to prevent directory flattening.
)

pkg_tar(
    name = "tmp-student_notebooks_tar",
    mode = "644",
    package_dir = "tmp/student",
    strip_prefix = ".",  # This is to prevent directory flattening.
    deps = [
        ":student_notebooks_tar",
        ":data_tar",
    ],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "README.md",
        "dataframe-pre1-master.ipynb",
        "dataframe-pre2-master.ipynb",
        "dataframe-pre3-master.ipynb",
        "dataframe-scrape-weather-data.ipynb",
        "defs.bzl",
        "functional-master.ipynb",
        "helloworld-en-master.ipynb",
        "introduction-to-nlp-master-english.ipynb",
        "introduction-to-nlp-wikipedia-preprocessing-japanese.ipynb",
        "nlp-exercise-master.ipynb",
        "oop-en-master.ipynb",
        "preamble.py",
        "test.csv",
    ] + glob(["data/*"]),
    visibility = ["//visibility:public"],
)
