load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "go.mod",
        "go.sum",
        "//go/autograder:all_files",
        "//go/cmd:all_files",
        "//go/notebook:all_files",
        "//go/queue:all_files",
        "//go/uploadserver:all_files",
    ],
    visibility = ["//visibility:public"],
)

# This rule is automatically added to the autograder_tar output.
pkg_tar(
    name = "binary_tar",
    srcs = [
        "//go/cmd/uploadserver",
        # Having a stand-alone grade binary in the image is helpful for debugging.
        "//go/cmd/grade",
    ],
    mode = "755",
    package_dir = "bin",
    # NOTE: This currently relies on a strange (buggy?) behavior  of pkg_tar
    # that it flattens the directory when strip_prefix is not specified,
    # see https://github.com/bazelbuild/rules_pkg/issues/82.
    visibility = ["//visibility:public"],
)
