load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "style.css",
    ],
    visibility = ["//visibility:public"],
)

# This rule is automatically added to the autograder_tar output.
pkg_tar(
    name = "static_tar",
    srcs = ["style.css"],
    mode = "644",
    package_dir = "static",
    strip_prefix = ".",
    visibility = ["//visibility:public"],
)
