filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "09-July-2019-Oshima-hourly.csv",
        "09-July-2019-Setagaya-hourly.csv",
        "09-July-2019-Tokyo-hourly.csv",
        "15-July-2019-Haneda-(Tokyo-International-Airport)-hourly.csv",
        "15-July-2019-Tokyo-hourly.csv",
        "16-July-2019-Haneda-(Tokyo-International-Airport)-hourly.csv",
        "16-July-2019-Tokyo-hourly.csv",
        "17-July-2019-Haneda-(Tokyo-International-Airport)-hourly.csv",
        "17-July-2019-Tokyo-hourly.csv",
        "BUILD.bazel",
        "README.md",
        "dataframe-ja.png",
        "tokyo-weather.csv",
    ],
    visibility = ["//visibility:public"],
)
