load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "autograder",
    srcs = ["autograder.go"],
    importpath = "github.com/google/prog-edu-assistant/autograder",
    deps = [
        "//go/notebook",
        "@com_github_golang_glog//:go_default_library",
    ],
)
