load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "notebook",
    srcs = ["notebook.go"],
    importpath = "github.com/google/prog-edu-assistant/notebook",
    deps = [
        "@com_github_golang_glog//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)

go_test(
    name = "notebook_test",
    srcs = ["notebook_test.go"],
    embed = [":notebook"],
    deps = [
        "@com_github_andreyvit_diff//:go_default_library",
        "@com_github_sergi_go_diff//diffmatchpatch:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = ["notebook.go"],
    importpath = "github.com/google/prog-edu-assistant/notebook",
    deps = [
        "@com_github_golang_glog//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["notebook_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_andreyvit_diff//:go_default_library",
        "@com_github_sergi_go_diff//diffmatchpatch:go_default_library",
    ],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "README.md",
        "notebook.go",
        "notebook_test.go",
    ],
)
