load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "queue",
    srcs = ["queue.go"],
    importpath = "github.com/google/prog-edu-assistant/queue",
    deps = [
        "@com_github_golang_glog//:go_default_library",
        "@com_github_streadway_amqp//:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = ["queue.go"],
    importpath = "github.com/google/prog-edu-assistant/queue",
    deps = [
        "@com_github_golang_glog//:go_default_library",
        "@com_github_streadway_amqp//:go_default_library",
    ],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "README.md",
        "queue.go",
    ],
)
