load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "uploadserver",
    srcs = ["uploadserver.go"],
    importpath = "github.com/google/prog-edu-assistant/uploadserver",
    deps = [
        "//go/autograder",
        "//go/queue",
        "@com_google_cloud_go//storage:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_gorilla_sessions//:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
        "@org_golang_x_oauth2//google:go_default_library",
    ],
)
