load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "uploadserver",
    srcs = ["uploadserver.go"],
    importpath = "github.com/google/prog-edu-assistant/uploadserver",
    deps = [
        "//go/autograder",
        "//go/queue",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_gorilla_sessions//:go_default_library",
        "@com_github_square_go_jose//:go_default_library",
        "@com_google_cloud_go//storage:go_default_library",
        "@in_gopkg_square_go_jose_v2//:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
        "@org_golang_x_oauth2//google:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = ["uploadserver.go"],
    importpath = "github.com/google/prog-edu-assistant/uploadserver",
    deps = [
        "//go/autograder",
        "//go/queue",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_gorilla_sessions//:go_default_library",
        "@com_github_square_go_jose//:go_default_library",
        "@com_google_cloud_go//storage:go_default_library",
        "@in_gopkg_square_go_jose_v2//:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "README.md",
        "uploadserver.go",
    ],
)
