package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_binary(
    name = "assign",
    srcs = ["assign.go"],
    importpath = "github.com/google/prog-edu-assistant/assign/cmd",
    deps = [
        "//go/notebook",
    ],
)
