load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["grade.go"],
    importpath = "github.com/google/prog-edu-assistant/cmd/grade",
    visibility = ["//visibility:private"],
    deps = ["//go/autograder"],
)

go_binary(
    name = "grade",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "grade.go",
    ],
    visibility = ["//visibility:public"],
)
