load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["post.go"],
    importpath = "github.com/google/prog-edu-assistant/cmd/post",
    visibility = ["//visibility:private"],
    deps = ["//go/queue"],
)

go_binary(
    name = "post",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "post.go",
    ],
    visibility = ["//visibility:public"],
)
