package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_binary(
    name = "uploadserver",
    srcs = ["main.go"],
    gc_linkopts = [
        "-linkmode",
        "external",
        "-extldflags",
        "-static",
    ],
    importpath = "github.com/google/prog-edu-assistant/cmd/uploadserver",
    deps = [
        "//go/autograder",
        "//go/queue",
        "//go/uploadserver",
        "@com_github_golang_glog//:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
        "@org_golang_x_oauth2//google:go_default_library",
    ],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "docker",
    srcs = ["main.go"],
    base = "@alpine_with_bash//image",
    gc_linkopts = [
        "-linkmode",
        "external",
        "-extldflags",
        "-static",
    ],
    importpath = "github.com/google/prog-edu-assistant/cmd/uploadserver",
    deps = [
        "//go/autograder",
        "//go/queue",
        "//go/uploadserver",
        "@com_github_golang_glog//:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
        "@org_golang_x_oauth2//google:go_default_library",
    ],
)
