package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "uploadserver",
    embed = [":go_default_library"],
    gc_linkopts = [
        "-linkmode",
        "external",
        "-extldflags",
        "-static",
    ],
    importpath = "github.com/google/prog-edu-assistant/cmd/uploadserver",
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "docker",
    srcs = ["main.go"],
    base = "@alpine_with_bash//image",
    gc_linkopts = [
        "-linkmode",
        "external",
        "-extldflags",
        "-static",
    ],
    importpath = "github.com/google/prog-edu-assistant/cmd/uploadserver",
    deps = [
        "//go/autograder",
        "//go/queue",
        "//go/uploadserver",
        "@com_github_golang_glog//:go_default_library",
        "@com_google_cloud_go//storage:go_default_library",
        "@in_gopkg_square_go_jose_v2//:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
        "@org_golang_x_oauth2//google:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/google/prog-edu-assistant/cmd/uploadserver",
    deps = [
        "//go/autograder",
        "//go/queue",
        "//go/uploadserver",
        "@com_github_golang_glog//:go_default_library",
        "@com_google_cloud_go//storage:go_default_library",
        "@in_gopkg_square_go_jose_v2//:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
        "@org_golang_x_oauth2//google:go_default_library",
    ],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "main.go",
    ],
)
