package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_binary(
    name = "worker",
    srcs = ["worker.go"],
    gc_linkopts = [
        "-linkmode",
        "external",
        "-extldflags",
        "-static",
    ],
    importpath = "github.com/google/prog-edu-assistant/cmd/worker",
    deps = [
        "//go/autograder",
        "//go/queue",
        "@com_github_golang_glog//:go_default_library",
    ],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "docker",
    srcs = ["worker.go"],
    base = "//exercises:autograder_image",
    gc_linkopts = [
        "-linkmode",
        "external",
        "-extldflags",
        "-static",
    ],
    importpath = "github.com/google/prog-edu-assistant/cmd/worker",
    deps = [
        "//go/autograder",
        "//go/queue",
        "@com_github_golang_glog//:go_default_library",
    ],
)
