package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "worker",
    embed = [":go_default_library"],
    gc_linkopts = [
        "-linkmode",
        "external",
        "-extldflags",
        "-static",
    ],
    importpath = "github.com/google/prog-edu-assistant/cmd/worker",
)

go_library(
    name = "go_default_library",
    srcs = ["worker.go"],
    importpath = "github.com/google/prog-edu-assistant/cmd/worker",
    deps = [
        "//go/autograder",
        "//go/queue",
        "@com_github_golang_glog//:go_default_library",
    ],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "worker.go",
    ],
)
